--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -336,18 +336,19 @@
       "metadata": {
         "id": "vnqGBX4DYv17"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Importando uma função específica de uma biblioteca\n"
+        "# Importando uma função específica de uma biblioteca\n",
+        "from random import choices\n"
       ],
       "metadata": {
         "id": "5UYHaiWaGoy1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -365,21 +366,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "help(choices)"
+      ],
       "metadata": {
-        "id": "fKv4W4PJXNOR"
+        "id": "fKv4W4PJXNOR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d3087de-7be4-40dd-8d4a-e0e10d6be234"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on method choices in module random:\n",
+            "\n",
+            "choices(population, weights=None, *, cum_weights=None, k=1) method of random.Random instance\n",
+            "    Return a k sized list of population elements chosen with replacement.\n",
+            "    \n",
+            "    If the relative weights or cumulative weights are not specified,\n",
+            "    the selections are made with equal probability.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudante = choices(estudantes_2)\n",
+        "estudante"
+      ],
       "metadata": {
-        "id": "Pal_mZsFcV80"
+        "id": "Pal_mZsFcV80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75643709-5869-4f36-f093-b9038f7ff323"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Maria']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
