--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -422,6 +422,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from random import randrange, sample\n",
+        "\n",
+        "lista = []\n",
+        "\n",
+        "for i in range(0, 20):\n",
+        "  lista.append(randrange(100))\n",
+        "\n",
+        "sample(lista, 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n_h5qBvZTW_c",
+        "outputId": "835b8726-81e0-40d3-f9d7-459766319ae7"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[65, 17, 96, 81, 14]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math \n",
+        "\n",
+        "n = int(input(\"Digite um número positivo para calcular sua raiz quadrada:\"))\n",
+        "print(f\"\\nA raiz quadrada de {n} é igual a {math.sqrt(n)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gjLIC-x3Tb7n",
+        "outputId": "239e1879-b86e-48c6-ef00-1ec00a9e2280"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número positivo para calcular sua raiz quadrada:6\n",
+            "\n",
+            "A raiz quadrada de 6 é igual a 2.449489742783178\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## <font color=green> 2. FUNÇÕES\n",
