--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -265,12 +265,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import randint\n",
+        "# Transformando a quantidade de participantes de string para inteiro\n",
+        "n = int(input(\"Digite o nº de participantes do sorteio: \"))\n",
+        "# Sorteando um número no intervalo de 1 até a quantidade de participantes\n",
+        "print(f\"O número sorteado foi {randint(1, n)}\")"
+      ],
       "metadata": {
-        "id": "G4k5jUdAao8t"
+        "id": "G4k5jUdAao8t",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6fa2d4db-0d60-40c6-aa03-ccddbed920ad"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o nº de participantes do sorteio: 899\n",
+            "O número sorteado foi 664\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -287,12 +306,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import randrange\n",
+        "\n",
+        "nome = input(\"Qual o seu nome? \")\n",
+        "# Gerando um token par de 1000 a 9998. O randrange tem o intervalo aberto em 10000, ou seja,\n",
+        "# não considera 10000 como opção de escolha (token >= 1000 e token < 10000)\n",
+        "token = randrange(1000, 10000, 2)\n",
+        "\n",
+        "print(f\"Olá, {nome}, o seu token de acesso é {token}! Seja bem-vindo(a)!\")"
+      ],
       "metadata": {
-        "id": "Y4ACJ4rEaqQW"
+        "id": "Y4ACJ4rEaqQW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "783b131a-6b6f-4e7a-dd94-50935f814696"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qual o seu nome? renata\n",
+            "Olá, renata, o seu token de acesso é 9084! Seja bem-vindo(a)!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -314,12 +355,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import choices\n",
+        "\n",
+        "# Lista das frutas disponíveis\n",
+        "frutas = [\"maçã\", \"banana\", \"uva\", \"pêra\",\"manga\", \"coco\", \n",
+        "          \"melancia\", \"mamão\", \"laranja\", \"abacaxi\", \"kiwi\", \"ameixa\"]\n",
+        "\n",
+        "# Gerando uma lista com a escolha aleatoria de 3 frutas \n",
+        "salada = choices(frutas, k=3)\n",
+        "\n",
+        "# Imprimindo os itens da lista de frutas gerada\n",
+        "print(f\"A salada surpresa é: {salada[0]}, {salada[1]} e {salada[2]}\")"
+      ],
       "metadata": {
-        "id": "gR0BNVGoarOv"
+        "id": "gR0BNVGoarOv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc9caafb-100b-474d-ff86-d410bdfbfcca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A salada surpresa é: ameixa, abacaxi e manga\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
