--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -416,12 +416,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from math import sqrt\n",
+        "\n",
+        "numeros = [2, 8, 15, 25, 81, 112, 256]\n",
+        "# iniciando uma lista vazia para receber as raízes\n",
+        "raiz = []\n",
+        "\n",
+        "# laço for para calcular cada raiz da lista de números e adicionar a lista raiz\n",
+        "for numero in numeros:\n",
+        "  raiz.append(sqrt(numero))\n",
+        "\n",
+        "# laço for para ler a lista raiz e exibir um texto só quando a raiz for um valor inteiro \n",
+        "for i in range(len(raiz)):\n",
+        "  # condição para testar se um número é inteiro (Ex: 2.5 // 1 = 2 ... 2 != 2.5)\n",
+        "  if raiz[i] // 1 == raiz[i]:\n",
+        "    print(f\"O número {numeros[i]} possui raiz quadrada inteira igual a {int(raiz[i])}\")"
+      ],
       "metadata": {
-        "id": "80eu9G8HaswW"
+        "id": "80eu9G8HaswW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f717ba80-7414-4417-c2ae-0f1fb7486c8f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O número 25 possui raiz quadrada inteira igual a 5\n",
+            "O número 81 possui raiz quadrada inteira igual a 9\n",
+            "O número 256 possui raiz quadrada inteira igual a 16\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -437,12 +467,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# importando 2 métodos da mesma biblioteca\n",
+        "from math import pi, pow\n",
+        "\n",
+        "raio = float(input(\"Digite o raio da área circular em metros: \"))\n",
+        "# Cálculo da área com os métodos da math e obtenção do custo em reais\n",
+        "area = pi*pow(raio,2)\n",
+        "valor = area * 25.00\n",
+        "\n",
+        "# Exibição do cálculo e custo na tela. O round(n,2) arredonda qualquer número em 2 casas decimais\n",
+        "print(f\"Você precisará pagar R$ {round(valor,2)} por uma área de {round(area,2)} metros de grama\")"
+      ],
       "metadata": {
-        "id": "VK0RHwYIattI"
+        "id": "VK0RHwYIattI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de04ad1d-68db-4a67-9ce4-fee2eafe494b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o raio da área circular em metros: 20\n",
+            "Você precisará pagar R$ 31415.93 por uma área de 1256.64 metros de grama\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
