--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -1015,9 +1015,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kRAMC_KbI6U4",
-        "outputId": "06f7bfdd-8551-4d59-8ccb-0d8718dd890e"
+        "outputId": "6b92ae85-7a56-4ccb-8155-9d0b78f62c46"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1027,53 +1027,125 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Calculando a soma\n"
+        "# Calculando a soma\n",
+        "soma = 0\n",
+        "\n",
+        "for nota in notas.values():\n",
+        "    soma += nota\n",
+        "\n",
+        "soma"
       ],
       "metadata": {
-        "id": "S7vIqSZJI6P4"
+        "id": "S7vIqSZJI6P4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d12590c5-416f-48f4-f8f8-b84f3ad79973"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Usando a função embutida sum()\n"
+        "# Usando a função embutida sum()\n",
+        "somatorio = sum(notas.values())\n",
+        "somatorio\n"
       ],
       "metadata": {
-        "id": "yr9YSRwNPF9S"
+        "id": "yr9YSRwNPF9S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5d6ad7e-3f4e-4838-daa5-1eb5c8616495"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Usando a função embutida len()\n"
+        "# Usando a função embutida len()\n",
+        "qtd_notas = len(notas)\n",
+        "qtd_notas\n"
       ],
       "metadata": {
-        "id": "Zn6XAAdQI6Fw"
+        "id": "Zn6XAAdQI6Fw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "358807b1-77a2-49ba-f3e4-510245e92b4f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# calculando a média\n"
+        "# calculando a média\n",
+        "media = somatorio / qtd_notas\n",
+        "media\n"
       ],
       "metadata": {
-        "id": "iUx5UixrNsQh"
+        "id": "iUx5UixrNsQh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2cfde67c-6a29-419c-85d1-fac90b7558b3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.333333333333334"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1088,21 +1160,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "round?"
+      ],
       "metadata": {
         "id": "OAZC5RwkSwWh"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media = somatorio / qtd_notas\n",
+        "media = round(media,1)\n",
+        "media"
+      ],
       "metadata": {
-        "id": "cJ1C2Pg-4PNq"
+        "id": "cJ1C2Pg-4PNq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db360ff5-9243-4bb3-bc57-663c942bf320"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
