--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -1198,6 +1198,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "peso = float(input(\"Digite o peso, em quilogramas: \"))\n",
+        "altura = float(input(\"Digite a altura, em metros: \"))\n",
+        "\n",
+        "imc = round(peso / pow(altura, 2), 2)\n",
+        "\n",
+        "print(f\"O IMC da pessoa é: {imc}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ey_6DkSxvH28",
+        "outputId": "67ffd588-00f9-4903-899d-d4f9c5c66bab"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o peso, em quilogramas: 71\n",
+            "Digite a altura, em metros: 1.65\n",
+            "O IMC da pessoa é: 26.08\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 2.2 Criando funções"
@@ -1235,21 +1265,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def media():\n",
+        "  calculo = (10 +9 +8) / 3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "zQtsnpyCzHfb"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media()"
+      ],
       "metadata": {
-        "id": "Eq4U8TPq0xOv"
+        "id": "Eq4U8TPq0xOv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa6fd130-429e-4381-8e0e-9e361d5ddb9b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1269,30 +1317,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def media(nota_1,nota_2,nota_3):\n",
+        "  calculo = (nota_1+nota_2+nota_3)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "zVIvbjeRDR24"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media(3,6,9)"
+      ],
       "metadata": {
-        "id": "c6H9lfBn3FuA"
+        "id": "c6H9lfBn3FuA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82febc76-beeb-4976-d255-ace40514037b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota1=8\n",
+        "nota2=7\n",
+        "nota3=6\n",
+        "\n",
+        "media(nota1,nota2,nota3)\n"
+      ],
       "metadata": {
-        "id": "38M9GYEVQp_x"
+        "id": "38M9GYEVQp_x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0680a32-4c9f-48b2-d7a2-9c205c92cc06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
