--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -1404,53 +1404,170 @@
       "metadata": {
         "id": "9AiWnXLuzc1P"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def media(lista):\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "bEf8Evf1DR0I"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media(notas)"
+      ],
       "metadata": {
-        "id": "R5ylO_vW6k8C"
+        "id": "R5ylO_vW6k8C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fbe1773a-525b-41e3-bf10-5fadfd1c29fa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado = media(notas)"
+      ],
       "metadata": {
-        "id": "9wNMcPOK_T9F"
+        "id": "9wNMcPOK_T9F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "407b7c04-d422-431c-9ef5-b5bbb46d6be8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado"
+      ],
       "metadata": {
         "id": "4xnmTQ9w_ZTi"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(resultado)"
+      ],
       "metadata": {
-        "id": "x6m24TcG_W3w"
+        "id": "x6m24TcG_W3w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9944813-b4b5-4ab6-8daa-60736dcc67b0"
       },
-      "execution_count": null,
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NoneType"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 7\n",
+        "\n",
+        "def soma():\n",
+        "  y = 9\n",
+        "  print(x + y)"
+      ],
+      "metadata": {
+        "id": "T1TjeNWp1ydr"
+      },
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soma()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zy82h-Be18Pd",
+        "outputId": "ae556d9f-d682-4db3-e6cc-56ad147d2f64"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x + y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "id": "99Tg0DCS2C2x",
+        "outputId": "65e9b430-f26a-4dfc-a329-dd47ab5464bc"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-f09a7b03ddbf>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1508,7 +1625,7 @@
       "metadata": {
         "id": "GlWdnX7Ubgl3"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1516,31 +1633,50 @@
       "source": [
         "def media(lista):\n",
         "  calculo = sum(lista) / len(lista)\n",
-        "  ..."
+        "  return calculo"
       ],
       "metadata": {
         "id": "B6yqoM7KAKKK"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado = media(notas)"
+      ],
       "metadata": {
         "id": "GlqPKe3_AT0Q"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado"
+      ],
       "metadata": {
-        "id": "E81HZh8rAYJz"
+        "id": "E81HZh8rAYJz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff7e53df-a517-4e41-8be8-3992bd65ff77"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1568,64 +1704,143 @@
       "metadata": {
         "id": "8LmWZ2U9-Zv3"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bJ9KmlHv5o0i"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rIiA2cpB-squ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_xf7bR6JBjD8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5ixwo3o3CdQ0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VFQacFSICeaO"
-      },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f'O(a) estudante atingiu uma média de {} e foi {}.')"
+        "def boletim(lista):\n",
+        "  media = sum(lista) / len(lista)\n",
+        "\n",
+        "  if media>=6:\n",
+        "    situacao = \"Aprovado(a)\"\n",
+        "  else:\n",
+        "    situacao = \"Reprovado(a)\"\n",
+        "\n",
+        "  return(media,situacao)"
       ],
       "metadata": {
-        "id": "ecFviUvOCgXF"
+        "id": "bJ9KmlHv5o0i"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "boletim(notas)"
+      ],
+      "metadata": {
+        "id": "rIiA2cpB-squ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd3b24b9-4fff-4819-bbcd-8de9f4de22ff"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6.75, 'Aprovado(a)')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "media,situacao = boletim(notas)"
+      ],
+      "metadata": {
+        "id": "_xf7bR6JBjD8"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "media"
+      ],
+      "metadata": {
+        "id": "5ixwo3o3CdQ0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b3a7bf3-dabf-4580-e05b-0fa2eaf8aac3"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "situacao"
+      ],
+      "metadata": {
+        "id": "VFQacFSICeaO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1705ebd2-7473-48fb-d73c-be3f885b7512"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Aprovado(a)'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'O(a) estudante atingiu uma média de {media} e foi {situacao}.')"
+      ],
+      "metadata": {
+        "id": "ecFviUvOCgXF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c45de33b-8280-445d-cf49-64af1450217f"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O(a) estudante atingiu uma média de 6.75 e foi Aprovado(a).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
