--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -1843,6 +1843,142 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def <nome>(<param>: <tipo_param>) -> <tipo_retorno>:\n",
+        "  <instruções>\n",
+        "  return resultado"
+      ],
+      "metadata": {
+        "id": "WpgjtmKWiwvG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a nossa função recebe uma lista do tipo list e retorna uma variável do tipo float\n",
+        "def media(lista: list) -> float:\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "  return calculo"
+      ],
+      "metadata": {
+        "id": "PlvnoPjKiikd"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a nossa função recebe uma lista do tipo list e retorna uma variável do tipo float\n",
+        "# caso não recebe nenhum valor de parâmetro será passada uma lista com um único\n",
+        "# elemento sendo ele zero\n",
+        "def media(lista: list=[0]) -> float:\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "  return calculo"
+      ],
+      "metadata": {
+        "id": "aBiEojOsjGgS"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "media()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VSRLNArzjWEF",
+        "outputId": "c5fe854d-90f8-4f59-d8cf-35694853a595"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def <nome>(<param_1>, <param_2>, ..., <param_n>):\n",
+        "    ''' Texto documentando sua função...\n",
+        "    '''\n",
+        "  <instruções>\n",
+        "  return resultado"
+      ],
+      "metadata": {
+        "id": "QBVsjSPmoAUZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def media(lista: list=[0]) -> float:\n",
+        "  ''' Função para calcular a média de notas passadas por uma lista\n",
+        "\n",
+        "  lista: list, default [0]\n",
+        "    Lista com as notas para calcular a média\n",
+        "  return = calculo: float\n",
+        "    Média calculada\n",
+        "  '''\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "  return calculo"
+      ],
+      "metadata": {
+        "id": "pyZzaTo0oCod"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(media)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6NPMAOqHoPIT",
+        "outputId": "059137b0-7eed-4612-f553-3dcdde003514"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on function media in module __main__:\n",
+            "\n",
+            "media(lista: list = [0]) -> float\n",
+            "    Função para calcular a média de notas passadas por uma lista\n",
+            "    \n",
+            "    lista: list, default [0]\n",
+            "      Lista com as notas para calcular a média\n",
+            "    return = calculo: float\n",
+            "      Média calculada\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 2.4 Funções lambda\n",
@@ -1879,24 +2015,80 @@
     {
       "cell_type": "code",
       "source": [
-        "# Comparando uma função de qualitativo no formato de função para função anônima\n"
+        "# Comparando uma função de qualitativo no formato de função para função anônima\n",
+        "nota = float(input(\"Digite a nota do(a) estudante: \"))\n",
+        "\n",
+        "def qualitativo(x):\n",
+        "  return x + 0.5\n",
+        "\n",
+        "qualitativo(nota)\n"
       ],
       "metadata": {
-        "id": "4EjJD3w3lbzJ"
+        "id": "4EjJD3w3lbzJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da62a2ad-9595-414a-963b-9b0c61a85db2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite a nota do(a) estudante: 8\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando a mesma função para uma função lambda\n"
+        "# Testando a mesma função para uma função lambda\n",
+        "nota = float(input(\"Digite a nota do(a) estudante: \"))\n",
+        "\n",
+        "qualitativo = lambda x: x+0.5\n",
+        "\n",
+        "qualitativo(nota)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "vZjaUmaJFp3D"
+        "id": "vZjaUmaJFp3D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "16e8381f-bc9a-41a8-f4ff-2e34f863c0e4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite a nota do(a) estudante: 8\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1915,35 +2107,37 @@
         "N2 = float(input(\"Digite a 2ª nota do(a) estudante: \"))\n",
         "N3 = float(input(\"Digite a 3ª nota do(a) estudante: \"))\n",
         "\n",
-        "..."
+        "media_ponderavel = lambda x,y,z:(x*3+y*2+z*5)/10\n",
+        "media_estudante = media_ponderavel(N1,N2,N3)\n",
+        "media_estudante"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "azStYQgKnsZn",
-        "outputId": "af1aaa46-353d-4b69-c470-1bd7f2488ae0"
+        "outputId": "83714bb6-ee12-44d8-886b-d08bab4fb495"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Digite a 1ª nota do(a) estudante: 3\n",
-            "Digite a 2ª nota do(a) estudante: 4\n",
-            "Digite a 3ª nota do(a) estudante: 5\n"
+            "Digite a 1ª nota do(a) estudante: 8\n",
+            "Digite a 2ª nota do(a) estudante: 5\n",
+            "Digite a 3ª nota do(a) estudante: 9\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "7.9"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 11
         }
       ]
     },
@@ -1951,13 +2145,25 @@
       "cell_type": "code",
       "source": [
         "# Exibindo a média\n",
-        "print(f'O(a) estudante atingiu uma média de {}')"
+        "print(f'O(a) estudante atingiu uma média de {media_estudante}')"
       ],
       "metadata": {
-        "id": "Ek1s_FkjkQrW"
+        "id": "Ek1s_FkjkQrW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "53d1130e-0547-4a26-90a8-9537e30337f5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O(a) estudante atingiu uma média de 7.9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2001,38 +2207,132 @@
       "metadata": {
         "id": "RdoaWhuVI_OB"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nC6zW89lHI4K"
-      },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Não conseguimos aplicar o lambda em listas direto, é necessário \n",
-        "# utilizarmos junto a ela a função map\n"
+        "notas_atualizadas = lambda x: x+qualitativo\n",
+        "notas_atualizadas(notas)"
       ],
       "metadata": {
-        "id": "iM2jXtC8m1zc"
+        "id": "nC6zW89lHI4K",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 253
+        },
+        "outputId": "70f6d9e6-4ebf-4b3b-918d-2ca9e143d550"
       },
-      "execution_count": null,
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-17fd4215754a>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnotas_atualizadas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mqualitativo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnotas_atualizadas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-14-17fd4215754a>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnotas_atualizadas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mqualitativo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnotas_atualizadas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"float\") to list"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Não conseguimos aplicar o lambda em listas direto, é necessário \n",
+        "# utilizarmos junto a ela a função map\n",
+        "notas_atualizadas = map(lambda x: x+qualitativo, notas)\n",
+        "notas_atualizadas\n"
+      ],
+      "metadata": {
+        "id": "iM2jXtC8m1zc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aece96e0-4550-455d-cecb-151c02874c79"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<map at 0x7f16a5f8f0a0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas_atualizadas = list(notas_atualizadas)"
+      ],
+      "metadata": {
+        "id": "dAq9-TNTm1wf"
+      },
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_atualizadas"
+      ],
       "metadata": {
-        "id": "dAq9-TNTm1wf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I5Vu7WPhrrY6",
+        "outputId": "21c830e5-f94c-4ac4-c6fd-2fdd5338775d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[6.5, 7.5, 9.5, 6.0, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp_celsius = [0, 25, 37, 78, 100]\n",
+        "temp_fahrenheit = list(map(lambda x: (x * 9/5) + 32, temp_celsius))\n",
+        "temp_fahrenheit"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AfQROdrs4BWb",
+        "outputId": "b748b5a7-8254-465c-9417-fbfc398b8fed"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[32.0, 77.0, 98.6, 172.4, 212.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
